Add debug info for sitemap URL

--- a/.github/workflows/validate-docs-site.yaml
+++ b/.github/workflows/validate-docs-site.yaml
@@ -64,6 +64,8 @@ jobs:
           cat sitemap.xml.tmp >> _site/sitemap.xml
           printf '</urlset>\n' >> _site/sitemap.xml
           rm sitemap.xml.tmp
+          # Debug output for sitemap URL
+          echo "Generated sitemap available at: https://docs-demo.vm.validmind.ai/pr_previews/${{ github.head_ref }}/sitemap.xml"
 
     # See if site/notebooks/ has updates
     # Checks the current PR branch against the target branch
