We have another bug

--- a/.github/workflows/lighthouse-check.yaml
+++ b/.github/workflows/lighthouse-check.yaml
@@ -139,6 +139,9 @@ jobs:
                 # Skip the first 5 segments (pr_previews/username/branch/name/)
                 segments = segments[5:]
             
+            # Debug the depth calculation
+            print(f"URL depth calculation - Path: {path}, Segments: {segments}, Depth: {len(segments)}", file=sys.stderr)
+            
             return len(segments)
 
         def get_urls_from_sitemap(sitemap_url, max_depth):
