Uncomment print statement

--- a/.github/workflows/lighthouse-check.yaml
+++ b/.github/workflows/lighthouse-check.yaml
@@ -236,7 +236,7 @@ jobs:
                                     print(f"Recursively checking {path} at depth {get_url_depth(path)}", file=sys.stderr)
                                     links.update(get_links(full_url, max_depth, visited))
                                 else:
-                                    # print(f"Skipping recursive check for {path} - at max depth", file=sys.stderr)
+                                    print(f"Skipping recursive check for {path} - at max depth", file=sys.stderr)
                         else:
                             print(f"Skipping external domain link: {href}", file=sys.stderr)
             except Exception as e:
