Try fixing branch for post-render step again, revert to depth 0 for now

--- a/.github/workflows/validate-docs-site.yaml
+++ b/.github/workflows/validate-docs-site.yaml
@@ -38,6 +38,11 @@ jobs:
     - name: Populate installation
       run: cp -r site/_source/installation/site/installation site/installation
 
+    - name: Save branch name
+      run: |
+        mkdir -p .github
+        echo "${{ github.head_ref }}" > .github/head_ref
+
     - name: Render demo docs site
       run: |
           cd site
