--- a/site/_quarto.yml
+++ b/site/_quarto.yml
@@ -1,6 +1,6 @@
 project:
   type: website
-  post-render: make generate-sitemap
+  post-render: PR_BRANCH=${{ github.head_ref }} make generate-sitemap
 
 metadata-files:
   - developer/_sidebar.yaml
