Try Makefile to get the PR branch again

--- a/site/_quarto.yml
+++ b/site/_quarto.yml
@@ -1,9 +1,6 @@
 project:
   type: website
-  post-render: |
-    #!/bin/bash
-    export PR_BRANCH="${{ github.head_ref }}"
-    make generate-sitemap
+  post-render: make generate-sitemap
 
 metadata-files:
   - developer/_sidebar.yaml
