Fix error when target folder does not exist

--- a/site/Makefile
+++ b/site/Makefile
@@ -66,6 +66,7 @@ clone:
 
 copy-installation:
 	@echo "\nCopying installation source files ..."
+	@mkdir -p installation
 	@cp -r $(SRC_ROOT)/installation/site/installation/* installation/
 
 # Copy over Jupyter notebooks and supporting files
