Attempt to fetch branch in workflow, again

--- a/site/Makefile
+++ b/site/Makefile
@@ -3,9 +3,9 @@ DEST_DIR_NB := notebooks
 DEST_DIR_PYTHON := validmind
 DEST_DIR_TESTS := tests
 FILE_PATH := notebooks/EXECUTED/model_development
-GIT_BRANCH := $(or $(shell git rev-parse --abbrev-ref HEAD 2>/dev/null),$(shell cat .github/head_ref 2>/dev/null),$(PR_BRANCH),$(GITHUB_REF_NAME))
+GIT_BRANCH := $(or $(GITHUB_REF_NAME),$(shell git rev-parse --abbrev-ref HEAD 2>/dev/null),$(shell cat .github/head_ref 2>/dev/null),$(PR_BRANCH))
 ifndef GIT_BRANCH
-$(error Could not determine branch name. Please set PR_BRANCH environment variable.)
+$(error Could not determine branch name. Please set GITHUB_REF_NAME or PR_BRANCH environment variable.)
 endif
 INSTALLATION_BRANCH := main
 LIBRARY_BRANCH ?= $(or $(BRANCH),main)
