Progress but still not quite the branch name

--- a/site/Makefile
+++ b/site/Makefile
@@ -3,7 +3,7 @@ DEST_DIR_NB := notebooks
 DEST_DIR_PYTHON := validmind
 DEST_DIR_TESTS := tests
 FILE_PATH := notebooks/EXECUTED/model_development
-GIT_BRANCH := $(or $(GITHUB_REF_NAME),$(shell git rev-parse --abbrev-ref HEAD))
+GIT_BRANCH := $(or $(GITHUB_HEAD_REF),$(GITHUB_REF_NAME),$(shell git rev-parse --abbrev-ref HEAD))
 INSTALLATION_BRANCH := main
 LIBRARY_BRANCH ?= $(or $(BRANCH),main)
 PROFILE := exe-demo
