Try to fix URL construction issue & better authentication

--- a/.github/workflows/lighthouse-check.yaml
+++ b/.github/workflows/lighthouse-check.yaml
@@ -303,11 +303,33 @@ jobs:
       run: |
         cat > .lighthouserc.js << 'EOF'
         const fs = require('fs');
+        const authHeaders = JSON.parse(fs.readFileSync('auth-headers.json', 'utf-8'));
+        const urls = fs.readFileSync('lhci-urls.txt', 'utf-8').split('\n').filter(Boolean);
+        
         module.exports = {
           ci: {
             collect: {
-              url: fs.readFileSync('lhci-urls.txt', 'utf-8').split('\n').filter(Boolean),
-              extraHeaders: JSON.parse(fs.readFileSync('auth-headers.json', 'utf-8')),
+              url: urls,
+              numberOfRuns: 1,
+              settings: {
+                extraHeaders: authHeaders,
+                formFactor: 'desktop',
+                screenEmulation: {
+                  mobile: false,
+                  width: 1350,
+                  height: 940,
+                  deviceScaleFactor: 1,
+                  disabled: false,
+                },
+                throttling: {
+                  rttMs: 40,
+                  throughputKbps: 10240,
+                  cpuSlowdownMultiplier: 1,
+                  requestLatencyMs: 0,
+                  downloadThroughputKbps: 0,
+                  uploadThroughputKbps: 0,
+                },
+              },
             },
             assert: {
               assertions: {
@@ -330,6 +352,8 @@ jobs:
         configPath: .lighthouserc.js
         uploadArtifacts: true
         temporaryPublicStorage: true
+        basicAuthUsername: ${{ secrets.INSTALLATION_USER }}
+        basicAuthPassword: ${{ secrets.INSTALLATION_PW }}
 
     - name: Check Lighthouse audit result
       if: steps.check_preview.outputs.preview_exists == 'true'
